# rkan

./: .gitignore  Cargo.toml  README-crates.io.md  README.adoc
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
examples/: MyCoolMod.toml
src/: config.rs  main.rs
src/ckan/: file.rs  generator.rs  mod.rs  types.rs
src/github/: download.rs  mod.rs
src/validation/: install.rs  metadata.rs  mod.rs  zip.rs
tests/e2e/: Sol-Configs.toml  Sol-Core.toml  Sol-UranusSystem.toml
