[package]
name = "rkan"
description = "A Rust-based CLI tool for managing CKAN metadata files and repositories."
homepage = "https://github.com/hbjydev/rkan"
repository = "https://github.com/hbjydev/rkan"
readme = "README-crates.io.md"
license = "Apache-2.0"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
chrono = { version = "0.4.44", features = ["serde"] }
toml = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
octorust = "0.10.0"
reqwest = { version = "0.13.2", features = ["stream"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha1 = "0.11.0"
sha2 = "0.11.0"
tempfile = "3"
zip = "2"
futures-util = "0.3"
hex = "0.4"
regex = "1"
tracing-indicatif = "0.3"
indicatif = "0.17"
semver = "1.0.27"

[package.metadata.binstall]
pkg-fmt = "bin"